2025-08-16  Zhengyi Fu  <i@fuzy.me>

	* packages.el (eat): Fork it.

2025-08-16  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-switch-project): New command.
	(tui--project-callback): New function.

2025-08-16  Zhengyi Fu  <i@fuzy.me>

	* scripts/claude: Add --.

2025-08-16  Zhengyi Fu  <i@fuzy.me>

	* packages.el (ws-butler): Use lewang's GitHub repo instead of
	nongnu-elpa while nongnu-elpa is down.

2025-08-16  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/eshell-extras.el (eshell/rg): Disable heading so that
	`grep-mode' can parse the output.

2025-08-16  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-rg): Add --no-heading to rg args.

2025-08-15  Zhengyi Fu  <i@fuzy.me>

	Update gptel-config.el

	* site-lisp/gptel-config.el ("Moonshot"): Update backend definition.
	($websearch): Change category to "internal".
	(kimi-agent): Change temperature to 0.2.  Update tools and system prompt.

2025-08-14  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (shellcheck): Fix handling of remote files.

2025-08-14  Zhengyi Fu  <i@fuzy.me>

	* init.el (ws-butler-convert-leading-tabs-or-spaces):  Set to nil.

2025-08-14  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (+gptel-shellcheck-fix): Set
	`flymake-show-diagnostics-at-end-of-line' to `fancy'.

2025-08-14  Zhengyi Fu  <i@fuzy.me>

	* init.el: Remove `dotemacs-theme-refresh' from
	`after-make-frame-functions'.

2025-08-14  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-foot-exec): Simplify code.

2025-08-14  Zhengyi Fu  <i@fuzy.me>

	Fix straight flymake integration

	* init.el (straight-flymake-byte-compile): Use bootstrap.el
	instead straight.el to avoid emacs-verions-changed error.  Use
	map-apply to convert package names from strings to symbols.
	(trusted-content): Add straight repo dir and build dir.

2025-08-14  Zhengyi Fu  <i@fuzy.me>

	* init.el (+import-env-var-for-display): Fix importing display name.

2025-08-14  Zhengyi Fu  <i@fuzy.me>
