@@ -1,3 +1,14 @@
+2025-08-17  Zhengyi Fu  <i@fuzy.me>
+
+	* init.el (dotemacs-theme-refresh): Force `tab-line-tab-current'
+	and `tab-line-tab-inactive' to use white foreground when in dark
+	background mode.
+
+2025-08-16  Zhengyi Fu  <i@fuzy.me>
+
+	* site-lisp/gptel-config.el (gptel-backend, gptel-model): Set to
+	use deepseek-chat.
+
 2025-08-16  Zhengyi Fu  <i@fuzy.me>
 
 	* packages.el (eat): Fork it.
